@@ -1,3 +1,9 @@
+globus-gridftp-server (12.23-1+gt6.@distro@) @distro@; urgency=low
+
+  * send final performance and restart markers when finishing with error
+
+ -- Globus Toolkit <support@globus.org>  Thu, 21 Nov 2019 14:56:47 -0600
+
 globus-gridftp-server (12.22-1+gt6.@distro@) @distro@; urgency=low
 
   * win: don't fail dir listing when encountering invalid file
